[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/ability/shield_icon.png" type="Texture" id=1]
[ext_resource path="res://ui/font/TypistFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://texture/WhiteSquare.png" type="Texture" id=3]
[ext_resource path="res://ui/ability/AbilityStatus.gd" type="Script" id=4]
[ext_resource path="res://ui/ability/not_ready_icon.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.360784, 1, 0.764706, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.258824, 0.113725, 0.435294, 0.392157 )

[node name="AbilityStatus" type="VBoxContainer"]
margin_right = 32.0
margin_bottom = 53.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 32.0
margin_bottom = 32.0

[node name="Texture" type="TextureRect" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="Duration" type="TextureProgress" parent="HBoxContainer/Texture"]
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 0.5, 0.5 )
value = 75.0
rounded = true
texture_progress = ExtResource( 3 )
fill_mode = 3
tint_progress = Color( 0, 0.25098, 1, 0.666667 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotReady" type="TextureRect" parent="HBoxContainer/Texture"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrencyProgress" type="ProgressBar" parent="."]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 5 )
size_flags_horizontal = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 20.0
percent_visible = false

[node name="CostLabel" type="Label" parent="."]
margin_top = 45.0
margin_right = 32.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
